--- a/client/src/stylesheets/variables.scss
+++ b/client/src/stylesheets/variables.scss
@@ -1,11 +1,13 @@
 // palette
-$navbar-background-color: #000000;
+$navbar-background-color: #212223;
+$navbar-background-color2: #000000;
 $navbar-background-color-faded: rgba(33,34,35,0.8);
 $landing-page-dark-background-color: #191A1B;
 $background-color: #343434;
 $main-header-color: #A8CB5C;
 
-$button-background-colour: #439042;
+$button-background-colour: #4BBA63;
+$button-background-colour2: #439042;
 $button-border: solid 2px #4BBA63;
 $button-box-shadow: 3px 3px 12px #000000;
 $button-background-colour-on-hover: #4BBA63;
@@ -48,10 +50,12 @@ $letter-spacing-medium: 1.5px;
 $letter-spacing-small: 1px;
 
 //dimensions
-$navbar-height: 75px;
+$navbar-height: 78px;
+$navbar-height2: 75px;
 $navbar-text-line-height: 15px;
 $navbar-image-line-height: 70px;
-$navbar-logo-height: 45px;
+$navbar-logo-height: 52px;
+$navbar-logo-height2: 45px;
 $section-padding: 120px;
 
 $navbar-width: 18vw;
